[gd_scene load_steps=3 format=3 uid="uid://cr2x2jqk4mb0x"]

[ext_resource type="Script" path="res://scenes/options/Settings.gd" id="1_n8447"]
[ext_resource type="FontFile" uid="uid://cw6hv1tq5uaod" path="res://fonts/ThaleahFat.ttf" id="2_ha0qx"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n8447")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 32.0
offset_top = 15.0
offset_right = 352.0
offset_bottom = 355.0

[node name="Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
text = "Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer" groups=["plays_music"]]
layout_mode = 2
min_value = -35.0
max_value = 15.0
value = 10.0

[node name="resolution" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
text = "Resolution
"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "640x360"
popup/item_3/id = 3

[node name="fullscreen" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
text = "Fullscreen"

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
item_count = 2
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="frame_cap" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
text = "FPS"

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
item_count = 4
popup/item_0/text = "30"
popup/item_0/id = 0
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "144"
popup/item_2/id = 3
popup/item_3/text = "Unlimited"
popup/item_3/id = 4

[node name="vsync" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
text = "VSYNC"

[node name="OptionButton4" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ha0qx")
item_count = 3
popup/item_0/text = "ON"
popup/item_0/id = 0
popup/item_1/text = "OFF"
popup/item_1/id = 1
popup/item_2/text = "ADAPTIVE"
popup/item_2/id = 2

[node name="Label7" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label8" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label9" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ha0qx")
theme_override_font_sizes/font_size = 25
text = "EXIT"
alignment = 0

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton3" to="." method="_on_option_button_3_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton4" to="." method="_on_option_button_4_item_selected"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
